--- a/src/lang/keyword.json
+++ b/src/lang/keyword.json
@@ -9,35 +9,35 @@
   "바깥옷": ["outwears", "outer", "cardigans", "jackets", "coats"],
   "바깥 옷": ["outwears", "outer", "cardigans", "jackets", "coats"],
 
-  "cardigans": "cardigans",
-  "카디건": "cardigans",
-  "가디건": "cardigans",
+  "cardigans": ["cardigans"],
+  "카디건": ["cardigans"],
+  "가디건": ["cardigans"],
 
-  "coats": "coats",
-  "코트": "coats",
-  "겨울 코트": "coats",
-  "겨울코트": "coats",
-  "가을 코트": "coats",
-  "가을코트": "coats",
-  "트렌치": "coats",
-  "트렌치 코트": "coats",
-  "트렌치코트": "coats",
-  "트랜치": "coats",
-  "트랜치 코트": "coats",
-  "트랜치코트": "coats",
+  "coats": ["coats"],
+  "코트": ["coats"],
+  "겨울 코트": ["coats"],
+  "겨울코트": ["coats"],
+  "가을 코트": ["coats"],
+  "가을코트": ["coats"],
+  "트렌치": ["coats"],
+  "트렌치 코트": ["coats"],
+  "트렌치코트": ["coats"],
+  "트랜치": ["coats"],
+  "트랜치 코트": ["coats"],
+  "트랜치코트": ["coats"],
 
-  "tops": "tops",
-  "상의": "tops",
-  "탑": "tops",
-  "윗옷": "tops",
-  "웃옷": "tops",
+  "tops": ["tops"],
+  "상의": ["tops"],
+  "탑": ["tops"],
+  "윗옷": ["tops"],
+  "웃옷": ["tops"],
 
   "bottoms": ["bottoms", "pants", "skirts"],
   "하의": ["bottoms", "pants", "skirts"],
 
-  "vests": "vests",
-  "조끼": "vests",
-  "쪼끼": "vests",
+  "vests": ["vests"],
+  "조끼": ["vests"],
+  "쪼끼": ["vests"],
 
   "onepiece": ["onepiece", "dresses"],
   "one piece": ["onepiece", "dresses"],
@@ -46,13 +46,13 @@
   "원피스": ["onepiece", "dresses"],
   "드레스": ["onepiece", "dresses"],
 
-  "pants": "pants",
-  "바지": "pants",
+  "pants": ["pants"],
+  "바지": ["pants"],
 
-  "skirts": "skirts",
-  "치마": "skirts",
-  "치마바지": "skirts",
-  "바지치마": "skirts",
+  "skirts": ["skirts"],
+  "치마": ["skirts"],
+  "치마바지": ["skirts"],
+  "바지치마": ["skirts"],
 
   "knitwear": ["knitwear", "sweater"],
   "니트": ["knitwear", "sweater"],
@@ -62,20 +62,20 @@
   "니트 스웨터": ["knitwear", "sweater"],
   "니트스웨터": ["knitwear", "sweater"],
 
-  "shirts": "shirts",
-  "셔츠": "shirts",
-  "샤츠": "shirts",
-  "샤쓰": "shirts",
-  "샤스": "shirts",
-  "티셔츠": "shirts",
+  "shirts": ["shirts"],
+  "셔츠": ["shirts"],
+  "샤츠": ["shirts"],
+  "샤쓰": ["shirts"],
+  "샤스": ["shirts"],
+  "티셔츠": ["shirts"],
 
-  "blouse": "blouses",
-  "blouses": "blouses",
-  "블라우스": "blouses",
-  "브라우스": "blouses",
+  "blouse": ["blouses"],
+  "blouses": ["blouses"],
+  "블라우스": ["blouses"],
+  "브라우스": ["blouses"],
 
-  "shoes": "shoes",
-  "신발": "shoes",
-  "구두": "shoes",
-  "운동화": "shoes"
+  "shoes": ["shoes"],
+  "신발": ["shoes"],
+  "구두": ["shoes"],
+  "운동화": ["shoes"]
 }
