Refactor: query String 추가

--- a/src/lang/keyword.json
+++ b/src/lang/keyword.json
@@ -35,6 +35,7 @@
   "bottoms": ["bottoms", "pants", "skirts"],
   "하의": ["bottoms", "pants", "skirts"],
 
+  "vest": ["vests"],
   "vests": ["vests"],
   "조끼": ["vests"],
   "쪼끼": ["vests"],
